<resources>
    <string name="app_name">心声</string>
    <string name="heart">心</string>
    <string name="voice">声</string>
    <string name="Copyright">Copyright © 2019 WQ. All Rights Reserved</string>
    <string name="forgtPassword">忘记密码</string>
    <string name="tecentLogin">QQ登录</string>
    <string name="userRegister">用户注册</string>
    <string name="resetPassword">找回密码</string>
    <string name="heartVoice">心声</string>
    <string name="outAccountNumber">请输入手机号</string>
    <string name="outPassword">请输入密码</string>
    <string name="outNewPassword">请输入新密码</string>
    <string name="outPasswordRetry">确认密码</string>
    <string name="outNickName">请输入昵称</string>
    <string name="outEmail">请输入邮箱</string>
    <string name="loginServiceApprove">登录即代表同意《服务协议》</string>
    <string name="registerServiceApprove">注册即代表同意《服务协议》</string>
    <string name="serviceApprove">《服务协议》</string>
    <string name="register">注册</string>
    <string name="reset">确认修改</string>
    <string name="loginSuccess">登录成功</string>
    <string name="registerSuccess">注册成功</string>
    <string name="numberFormatError">手机号格式不正确</string>
    <string name="passwordFormatError">密码长度小于6位</string>
    <string name="error_network_not_auth">错误的网络地址</string>
    <string name="error_network_not_permission">无网络权限</string>
    <string name="error_network_not_found">请求失败</string>
    <string name="error_network_server">无服务</string>
    <string name="error_network_unknown">网络错误类型位置</string>
    <string name="error_network_unknown_host">错误的主机地址</string>
    <string name="error_network_connect">无网络连接</string>
    <string name="error_network_timeout">连接超时</string>
    <string name="outCode">请输入验证码</string>
    <string name="sendCode">发送验证码</string>
    <string name="codeFormatError">验证码格式不正确</string>
    <string name="confirmPasswordError">两次密码不一致</string>
    <string name="countSecond">%1$ds</string>
    <string name="sendSuccess">验证码发送成功</string>
    <string name="protocol">
        本软件尊重并保护所有使用服务用户的个人隐私权。
        为了给您提供更准确、更有个性化的服务，本软件会按照本隐私权政策的规定使用和披露您的个人信息。
        但本软件将以高度的勤勉、审慎义务对待这些信息。
        除本隐私权政策另有规定外，在未征得您事先许可的情况下，本软件不会将这些信息对外披露或向第三方提供。
        本软件会不时更新本隐私权政策。您在同意本软件服务使用协议之时，即视为您已经同意本隐私权政策全部内容。
        本隐私权政策属于本软件服务使用协议不可分割的一部分。
    </string>
    <string name="protocol1">1.适用范围</string>
    <string name="protocol1c">
        (a)在您使用本软件网络服务，本软件自动接收并记录的您的手机上的信息，
        包括但不限于您的健康数据、使用的语言、访问日期和时间、软硬件特征信息及您需求的网页记录等数据。
    </string>

    <string name="protocol2">2.信息的使用</string>
    <string name="protocol2c">
        (a)在获得您的数据之后，本软件会将其上传至服务器，
        以生成您的排行榜数据，以便您能够更好地使用服务。
    </string>

    <string name="protocol3">3.信息披露</string>
    <string name="protocol3c">
        (a)本软件不会将您的信息披露给不受信任的第三方。
        (b)根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露。
        (c)如您出现违反中国有关法律、法规或者相关规则的情况，需要向第三方披露。
    </string>

    <string name="protocol4">4.信息存储和交换</string>
    <string name="protocol4c">
        (a)本软件收集的有关您的信息和资料将保存在本软件及（或）其关联公司的服务器上，
        这些信息和资料可能传送至您所在国家、地区或本软件收集信息和资料所在地的境外并在境外被访问、存储和展示。
    </string>

    <string name="protocol5">5.信息安全</string>
    <string name="protocol5c">
        a)在使用本软件网络服务进行网上交易时，您不可避免的要向交易对方或潜在的交易对方披露自己的个人信息，
        如联络方式或者邮政地址。请您妥善保护自己的个人信息，仅在必要的情形下向他人提供。
        如您发现自己的个人信息泄密，请您立即联络本软件客服，以便本软件采取相应措施。
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nickName">昵称</string>
    <string name="noneDescription">~~~~~~</string>
    <string name="my">我的</string>
    <string name="myMessage">我的消息</string>
    <string name="changeBack">个性换肤</string>
    <string name="IdentifySong">听歌识曲</string>
    <string name="scanIt">扫一扫</string>
    <string name="timingStop">定时停止播放</string>
    <string name="AboutUs">关于我们</string>
    <string name="myFriends">我的好友</string>
    <string name="LogOutApp">退出应用</string>
    <string name="setting">设置</string>
    <string name="logout">退出</string>
    <string name="dynamic">动态</string>
    <string name="musicHall">音乐馆</string>
    <string name="person_fm">私人电台</string>
    <string name="day_recommend">每日推荐</string>
    <string name="everyday_sheet">歌单</string>
    <string name="rank">排行榜</string>
    <string name="banner1">不能说的秘密</string>
    <string name="banner2">前世情人</string>
    <string name="jay">周杰伦</string>
    <string name="jayUrl">https://baike.baidu.com/item/%E5%91%A8%E6%9D%B0%E4%BC%A6</string>
    <string name="activity_sheet_detail">歌单详情</string>
    <string name="download">下载</string>
    <string name="play_all">播放全部</string>
    <string name="music_count">(共%1$d首)</string>
    <string name="select">选择歌词</string>
    <string name="collection">收藏(%1$d)</string>
    <string name="cancel_collection">取消(%1$d)</string>
    <string name="collection_success">收藏成功</string>
    <string name="cancel_collection_success">取消收藏成功</string>
    <string name="comment">评论</string>
    <string name="userDetail">用户详情</string>
    <string name="not_play">没有可播放的音乐</string>
    <string name="collection_all">收藏全部</string>
    <string name="list_loop">列表循环</string>
    <string name="one_loop">单曲循环</string>
    <string name="random_loop">随机循环</string>
    <string name="next_play">下一首播放</string>
    <string name="ll_collect_song">收藏到歌单</string>
    <string name="comment_count">评论(%1$d)</string>
    <string name="share">分享</string>
    <string name="delete_in_sheet">从歌单中删除</string>
</resources>
