<?xml version="1.0" encoding="utf-8"?>
<!--如果这面item过多加ScrollView-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--歌曲信息-->

    <LinearLayout
        android:padding="@dimen/dp_20"
        android:gravity="clip_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dp_5"
            app:cardElevation="@dimen/dp_0">

        <!--封面-->
            <ImageView
                android:id="@+id/iv_banner"
                android:src="@mipmap/place_holder"
                android:scaleType="centerCrop"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"/>

        </androidx.cardview.widget.CardView>

        <!--内容容器-->
        <LinearLayout
            android:layout_marginLeft="@dimen/dp_10"
            android:orientation="vertical"
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <!--标题-->
            <TextView
                android:id="@+id/tv_title"
                android:maxLines="1"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/black"
                android:ellipsize="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <!--歌手信息-->
            <TextView
                android:id="@+id/tv_singer"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/light_grey"
                android:text="这是歌手信息"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/divier_small"/>

    <!--按钮容器-->

    <LinearLayout
        style="@style/ItemContainer">

        <TextView
            style="@style/ItemTextMore"
            android:text="@string/next_play"/>

    </LinearLayout>

    <include layout="@layout/divier_small"/>

    <LinearLayout
        android:id="@+id/ll_collect_song"
        style="@style/ItemContainer">

        <TextView
            style="@style/ItemTextMore"
            android:text="@string/ll_collect_song"/>

    </LinearLayout>

    <include layout="@layout/divier_small"/>

    <LinearLayout
        style="@style/ItemContainer">

        <TextView
            style="@style/ItemTextMore"
            android:text="@string/download"/>

    </LinearLayout>

    <include layout="@layout/divier_small"/>

    <LinearLayout
        style="@style/ItemContainer">

        <TextView
            android:id="@+id/tv_comment_count"
            style="@style/ItemTextMore"
            android:text="@string/comment_count"/>

    </LinearLayout>

    <include layout="@layout/divier_small"/>

    <LinearLayout
        style="@style/ItemContainer">

        <TextView
            style="@style/ItemTextMore"
            android:text="@string/share"/>

    </LinearLayout>

    <include layout="@layout/divier_small"/>

</LinearLayout>