<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.activity.RegisterActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/forgetBackLogin"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:src="@mipmap/ic_back"
            android:scaleType="centerCrop"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_30"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetPassword"
            android:layout_marginTop="@dimen/dp_70"
            android:layout_marginStart="@dimen/dp_50"
            android:textSize="@dimen/sp_30"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_90"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_50"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55"
                android:layout_marginTop="@dimen/dp_30">

                <EditText
                    android:id="@+id/forgetOutNumber"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_55"
                    android:paddingLeft="@dimen/dp_50"
                    android:paddingRight="@dimen/dp_30"
                    android:textColor="@color/black"
                    android:hint="@string/outAccountNumber"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:inputType="text"/>

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:src="@mipmap/uer_account"
                    android:scaleType="centerCrop"/>

                <Button
                    android:id="@+id/sendCheck"
                    android:layout_width="@dimen/dp_60"
                    android:layout_height="@dimen/dp_30"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@drawable/selector_register_button"
                    android:textColor="@drawable/selector_text"
                    android:text="@string/sendCode"
                    android:textSize="@dimen/sp_10"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55"
                android:layout_marginTop="@dimen/dp_10">

                <EditText
                    android:id="@+id/outCheckData"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_55"
                    android:paddingLeft="@dimen/dp_50"
                    android:paddingRight="@dimen/dp_30"
                    android:textColor="@color/black"
                    android:hint="@string/outCode"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:inputType="number"/>

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:src="@mipmap/message"
                    android:scaleType="centerCrop"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55"
                android:layout_marginTop="@dimen/dp_10">

                <EditText
                    android:id="@+id/forOutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_55"
                    android:paddingLeft="@dimen/dp_50"
                    android:paddingRight="@dimen/dp_30"
                    android:textColor="@color/black"
                    android:hint="@string/outPassword"
                    android:maxLength="24"
                    android:maxLines="1"
                    android:inputType="textPassword"/>

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:src="@mipmap/user_password"
                    android:scaleType="centerCrop"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55"
                android:layout_marginTop="@dimen/dp_10">

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_55"
                    android:paddingLeft="@dimen/dp_50"
                    android:paddingRight="@dimen/dp_30"
                    android:textColor="@color/black"
                    android:hint="@string/outPasswordRetry"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:inputType="textPassword"/>

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:src="@mipmap/restore"
                    android:scaleType="centerCrop"/>

            </RelativeLayout>

            <Button
                android:id="@+id/confirmChange"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/reset"
                android:textColor="@drawable/selector_text"
                android:background="@drawable/selector_register_button"
                android:stateListAnimator="@null"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>