<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.activity.LoginActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1">
        <ImageView
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/dp_20"
            android:src="@mipmap/app_icon"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heartVoice"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:typeface="serif" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:layout_marginTop="@dimen/dp_30">

            <EditText
                android:id="@+id/accountPhone"
                android:background="@drawable/shape_info_edittext"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55"
                android:paddingLeft="@dimen/dp_50"
                android:paddingRight="@dimen/dp_30"
                android:textColor="@color/black"
                android:hint="@string/outAccountNumber"
                android:maxLength="11"
                android:maxLines="1"
                android:inputType="number"/>

            <ImageView
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:src="@mipmap/uer_account"
                android:scaleType="centerCrop"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:layout_marginTop="@dimen/dp_10">

            <EditText
                android:id="@+id/outPassword"
                android:background="@drawable/shape_info_edittext"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55"
                android:paddingLeft="@dimen/dp_50"
                android:paddingRight="@dimen/dp_30"
                android:textColor="@color/black"
                android:hint="@string/outPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:inputType="textPassword"/>

            <ImageView
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:src="@mipmap/user_password"
                android:scaleType="centerCrop"/>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="2">

        <ImageButton
            android:id="@+id/goLogin"
            android:background="@drawable/shape_login_button"
            android:layout_width="@dimen/dp_65"
            android:layout_height="@dimen/dp_65"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/go_login"
            android:scaleType="fitCenter"
            android:layout_marginTop="@dimen/dp_50" />

        <RelativeLayout
            android:layout_marginBottom="60dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_20"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/split"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:text="|"
                android:textColor="@color/light_grey" />

            <TextView
                android:id="@+id/forgetPassword"
                android:layout_centerHorizontal="true"
                android:layout_alignRight="@+id/split"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:text="@string/tecentLogin"
                android:layout_marginRight="@dimen/dp_30" />

            <TextView
                android:id="@+id/userRegister"
                android:layout_centerHorizontal="true"
                android:layout_alignLeft="@+id/split"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/userRegister"
                android:layout_marginLeft="@dimen/dp_30" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_20">

            <TextView
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginServiceApprove" />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>